--- a/src/main/asciidoc/quickstart.adoc
+++ b/src/main/asciidoc/quickstart.adoc
@@ -1,6 +1,6 @@
 :docs: https://bhuwanupadhyay.github.io/{repo}/
 
-Add `factory-parent-example` dependency in your project.
+Add `18-dynamo-db-nested-object` dependency in your project.
 
 .pom.xml
 ====
@@ -8,7 +8,7 @@ Add `factory-parent-example` dependency in your project.
 ----
 <dependency>
     <groupId>io.github.bhuwanupadhyay</groupId>
-    <artifactId>factory-parent-example</artifactId>
+    <artifactId>18-dynamo-db-nested-object</artifactId>
     <version>{revnumber}</version>
 </dependency>
 ----
